--- a/OCR/index.html
+++ b/OCR/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Camera OCR + AI Cleanup</title>
+        <title>OCR Demo</title>
 
         <!-- Tesseract.js from a CDN -->
         <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
