Polishing touches to OCR

--- a/OCR/index.html
+++ b/OCR/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Student Card Scanner</title>
+        <title>OCR Demo</title>
 
         <!-- Firebase Dependencies -->
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -252,7 +252,7 @@
                     >
                 </div>
 
-                <button id="save-btn" disabled>Save to Database</button>
+                <button id="save-btn" disabled>Save</button>
                 <div id="status-display" class="status-msg"></div>
             </div>
         </div>
